--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>microservice-provider</module>
         <module>microservice-consumer</module>
         <module>microservice-register</module>
+        <module>consumer-ribbon</module>
     </modules>
     <packaging>pom</packaging>
 
