--- a/microservice-provider/src/main/resources/application.yml
+++ b/microservice-provider/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 7900
+  port: 7902
 
 spring:
   datasource:
@@ -26,6 +26,7 @@ eureka:
     service-url:
       defaultZone: http://root:123456@localhost:8761/eureka
   instance:
+    status-page-url: http://localhost:${server.port}/swagger-ui.html #配置api接口文档 ${server.port}为该服务的端口号
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${spring.application.instance_id:${server.port}}
 
