--- a/consumer-ribbon/src/main/resources/application.yml
+++ b/consumer-ribbon/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://root:123456@localhost:8761/eureka
+#      defaultZone: http://root:123456@springcloud1:8761/eureka/,http://root:123456@springcloud2:8762/eureka/
+      defaultZone: http://root:123456@localhost:8761/eureka/
   instance:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${spring.application.instance_id:${server.port}}
@@ -19,3 +20,7 @@ eureka:
 provider:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule #自定义使用随机策略
+
+logging:
+  level:
+    com.masm: DEBUG
